[package]
name = "dybnamo_web_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
uuid = {version = "1.3.0", features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]}
serde = {version = "1.0.157", features = ["derive"]}
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
env_logger = "0.10.0"
log = "0.4.17"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
derive_more = "0.99.17"





